Fix fullscreen on Firefox 2

--- a/web/modules/custom/glico_submission/css/submission_preview.css
+++ b/web/modules/custom/glico_submission/css/submission_preview.css
@@ -485,6 +485,10 @@ html {
     border-radius: 3vw;
   }
 
+  .preview-wrapper .field-video-wrapper video.no-border-radius {
+    border-radius: 0!important;
+  }
+
   .field-video.video-frame-3 {
     border-radius: 5vw;
   }
